--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "socket.io": "^3.1.2"
   },
   "scripts": {
-    "start": "node ./server/server.js",
+    "start": "PORT=3003 node ./server/server.js",
     "test": "nightwatch tests"
   },
   "main": "./server/server.js",
